--- a/signUp.html
+++ b/signUp.html
@@ -16,7 +16,7 @@
         </div>
 
         <div class="flex flex-col mt-3">
-            <form name="myForm" method="get" class="login-info" action="/WebSite/signUp.html">
+            <form name="myForm" method="get" class="signUp-info" action="/WebSite/signUp.html">
                 <p class="py-6 text-3xl">Now let's make you a Nike Member.</p>
                 <div class="name flex flex-row justify-between">
                     <input class="border border-[#707072] placeholder:text-[#707072] hover:border-black px-3 py-4 rounded-xl mt-2 w-[48%]" type="text" id="first_name" name="first_name" placeholder="First Name*">
