--- a/signIn.html
+++ b/signIn.html
@@ -16,10 +16,12 @@
         </div>
 
         <div class="flex flex-col mt-3">
-            <form action="">
+            <form action="" name="myform" method="get">
                 <p class="py-6 text-3xl">Enter your email to Sign in.</p>
-                <input type="email" id="email" name="email" class="border border-[#707072] hover:border-black px-3 py-4 rounded-xl mt-2 w-full" placeholder="Email*" required>
-                <input type="password" id="password" name="password" class="border border-[#707072] hover:border-black px-3 py-4 rounded-xl mt-8 w-full" placeholder="Password*" required>
+                <input type="email" id="email" name="email" class="border border-[#707072] hover:border-black px-3 py-4 rounded-xl mt-2 w-full" placeholder="Email*">
+                <small id="error" class="text-red-600 text-xs"></small>
+                <input type="password" id="password" name="password" class="border border-[#707072] hover:border-black px-3 py-4 rounded-xl mt-8 w-full" placeholder="Password*">
+                <small id="errorr" class="text-red-600 text-xs"></small>
                 <a href="/WebSite/forgot-pass.html"><p class="pt-6 text-[18px] text-[#707072] underline">Forgot password?</p></a>
                 <p class="pt-10 text-xm text-[#707072]">By continuing, I agree to Nike's <span class="underline">Privacy Policy.</span><br> and <span class="underline">Terms of Use</span></p>
                 <div class="mt-3 flex justify-end">
